added navbar under menu and gitignore

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
     <header>
         <nav class="navbar">
             <a href="#" class="logo">Quotes Art</a>
-            <a href="#" class="menu">MENU <i class="fas fa-bars"></i></a>
+            <a href="#" class="menu" id="menu">MENU <i class="fas fa-bars"></i></a>
+        </nav>
+
+        <nav class="nav-collapse">
+            <a href="#" class="nav-item">Quote#1</a>
+            <a href="#page1" class="nav-item">Quote#2</a>
+            <a href="#page2" class="nav-item">Quote#3</a>
+            <a href="#page3" class="nav-item">Quote#4</a>
         </nav>
     </header>
 
